--- a/public/post/2019-07-31-smpc-for-students.Rmd
+++ b/public/post/2019-07-31-smpc-for-students.Rmd
@@ -1,8 +1,15 @@
 ---
-title: "SMPC for Students"
-author: "David John Baker"
-date: "7/11/2019"
-output: html_document
+title: SMPC for Students
+author: ~
+date: '2019-07-31'
+slug: smpc-for-students
+categories: []
+tags: []
+header:
+  caption: ''
+  image: ''
+highlight: yes
+math: no
 ---
 
 Next week is [SMPC](https://wp.nyu.edu/smpc2019/)!!! 
@@ -32,18 +39,18 @@ The four events are:
 The first event, timed accordingly, is going to the graduate student meet-and-greet.
 When I first ran the idea on Twitter, there seemed to be a positive response from not only students, but faculty that were interested in getting to know other people.
 At a conference where you have people coming from many perspectives on what it means to study music ranging from neuroscience, to music theory, to psychology, to music information retrieval, it's important for attendees to be able to talk to other researchers.
-At the time of the Twitter conversation in Early July, [Blair]() and [Brian]() suggested a human bingo as a way to help facilitate this.
+At the time of the Twitter conversation in early July, [Blair](https://twitter.com/BlairKaneshiro) and [Brian](https://twitter.com/functiontelechy) suggested a human bingo as a way to help facilitate this.
 
-I've got all the cards ready to go and printed and will be distributing them post-Monday's keynote.
+I'll be printing out the this weekend and will be distributing them post-Monday's keynote.
 Anyone is welcome to grab them and play in that middle awkward period between the talk and the reception (see image) and will hopefully get people talking.
 
-* IMAGE HERE
+![](/img/smpc_student/smpc_social.png)
 
 A little into the reception, we'll be pulling some of the grad students to the side so everyone can have a chat with one another.
-What I'm hoping for here is just a lot of "Hello, you're interested in music research?! That's crazy! I'm also interested in music research!?"" conversations happening.
+What I'm hoping for here is just a lot of "Hello, you're interested in music research?! That's crazy! I'm also interested in music research!?" conversations happening.
 Hopefully there will be a lot of small hellos and then as the night progresses there will be some nice integration between schools, departments, and labs. 
 
-One thing that is tricky that was pointed out by [Dom]() is that in events like this is that activities like human bingo or just letting people roam free in a giant room really favors people who can flex their extroversion muscles.
+One thing that is tricky that was pointed out by [Dom](https://twitter.com/DoctaDom) is that in events like this is that activities like human bingo or just letting people roam free in a giant room really favors people who can flex their extroversion muscles.
 For this reason, I really tried to add questions to the human bingo that allows people further out on the orbit of socializing to be sought out and valued via their status as newcomers with bingo spaces such as "First time at conference" or for the more intrepid "Came to SMPC solo".
 
 But this of course doesn't still ensure that the less boisterous people will still feel engaged.
@@ -54,16 +61,16 @@ I also have some Google docs that we will be using for the next two sessions tha
 ### Early Career Reserach Forum
 
 The next two events we have here are forum events that have now been a part of SMPC for the past few years.
-From what I have gathered from previous student reps, the Early Career session was created first and in its first instatiation a lot of the question time was taken up with many of the even career-younger people asking about applying to grad school, so these sessions were both split.
+From what I have gathered from previous student reps, the Early Career session was created first and in its first version a lot of the question time was taken up with many of the even career-younger people asking about applying to grad school, so these sessions were both split.
 
 This year's Early Career Advice panel consists of four members and hopefully covers a diverse array of opinions and advice that could be offered.
-This year we have [Caitlyn Trevor]() who just completed her Ph.D. in Music Theory from Ohio State University and is now living in Europe on a [Marie Curie Postdocotral]() fellowship.
-We also have [Psyche Loui](), a psychology and neuroscience researcher who is a assistant professor at Northeastern.
-There's also [Brian McFee](), an assistant professor at NYU who is cross appointed in music as well as data science.
-Then last but not least there is [Steve Keller]() who just recently was appointed as POSITION TITLE at [Pandora]().
+This year we have [Caitlyn Trevor](https://twitter.com/caitlyn_trevor) who just completed her Ph.D. in Music Theory from Ohio State University and is now living in Europe on a [Marie Curie Postdocotral](https://www.psychology.uzh.ch/en/areas/nec/kaneuro/team/ctrevor.html) fellowship.
+We also have [Psyche Loui](https://twitter.com/psycheloui), a psychology and neuroscience researcher who is an assistant professor at Northeastern.
+There's also [Brian McFee](https://twitter.com/functiontelechy), an assistant professor at NYU who is cross appointed in music as well as data science.
+Then last but not least there is [Steve Keller](https://twitter.com/audioalchemist_) who just recently was appointed as the Sonic Strategy Directory at [Pandora](https://www.pandoraforbrands.com/studio-resonate).
 
-Hopefully this permutation of people covers all the possiblities that someone might have questions about...
-At this point I am not sure exactly how the conversation will go, but I have created a Google doc accessible [here]() where people can write some questions ahead of time so we can see what kind of topics will be popular and for those who don't want to ask a big question in a large room can feel more comfortable.
+Hopefully this permutation of people covers all the possiblities that someone might have questions about and also hopefully people will mention that the panel is not only traditional, senior, tenure track academics bestowing knowledge to students two academic generations removed.
+At this point I am not sure exactly how the conversation will go, but I have created a Google doc accessible [here](https://docs.google.com/document/d/1IsbnT7XaWY9v1rEejGYt-JNfquqacDvuT7p38MH8JlQ/edit?usp=sharing) where people can write some questions ahead of time so we can see what kind of topics will be popular and for those who don't want to ask a big question in a large room can feel more comfortable.
 
 I'm imagining this whole thing wanting to stretch longer than the 45 minutes we have at lunch, but I will be encouraging everyone to at least link up on Twitter or later via email if they need an "in" to get a question answered they did not have.
 Hopefully questions from this session can then go to a bigger FAQ that the SMPC website could hold so we don't have to re-invent the wheel every year with this. 
@@ -73,17 +80,17 @@ Hopefully questions from this session can then go to a bigger FAQ that the SMPC 
 Similar in many respects, but just earlier in the typical pipeline of people who attend SMPC, is the Applying to Grad School session.
 This session was a bit tricky to organize in order to make sure I covered all my bases, but we'll see.
 
-In the early career session we have [Daniel Shanahan](), who has just recently started a position at Ohio State University in a Theory department (also my Ph.D adviser!); [Ed Large]() a former SMPC president, associate professor and head of [UCONN lab]() where he does neuroscience; [Hayley Kragness]() a post-doc in Canada at [UTSC](); and last but certainly not least is  [Kelly Jakubowski]() who has experiences with UK Post-graduate system where she did both her MSc and PhD in Psychology and now runs the new lab at [Durham]() where they will be having a new music psychology program come 2020.
+In the early career session we have [Daniel Shanahan](https://twitter.com/danielshanahan), who has just recently started a position at Ohio State University in a Theory department (also my Ph.D adviser!); [Ed Large](https://twitter.com/ed_large) a former SMPC president, associate professor and head of [UCONN lab]() where he does neuroscience; [Hayley Kragness](https://twitter.com/haleykrag) a post-doc in Canada at [The TEMPO Lab](https://twitter.com/TempoLabUTSC); and last but certainly not least is  [Kelly Jakubowski](https://www.dur.ac.uk/music/staff/profile/?id=15013) who has experiences with UK Post-graduate system where she did both her MSc and PhD in Psychology and now runs the new lab at [Durham](https://twitter.com/MusicScienceDU) where they will be having a new music psychology program come 2020.
 
 You'll notice that this list hopefully again strikes a balance between state and private schools, regions (America, Canada, Europe), seniority, as well as discipline.
 Again, I hope given this krewe, there will not be a question where they can't answer or at least be able to point someone in the right direction of who to talk to.
-The same thing goes with having a [google doc]() to list out questions before for similar reasons as above.
+The same thing goes with having a [google doc](https://docs.google.com/document/d/1uGlzSnmIsKAMx78l2w-bL14S1uLuU9wCAzZaK2TXgg8/edit?usp=sharing) to list out questions before for similar reasons as above.
 
 ### Lunch 
 
 Lastly, we have the Faculty-Lunch session.
 At this point we've had both faculty and students sign up for this event and it'll give students a chance to meet one-on-one with someone they may or may not have gotten to chat to face to face.
-I've always thought this would be something nice for [SMT]() to adopt, just throwing that out there.
+I've always thought this would be something nice for [SMT](https://societymusictheory.org/) to adopt, just throwing that out there.
 
 As an aside, The student faculty lunch was always something I looked forward to and hope that all the faculty take it quite seriously as things that they say and pass on can have quite the impression on greener researchers.
 I specifically remember getting tacos in Nashville before starting my Ph.D. and bringing up my concern I had about doing a Ph.D. in Music Theory having come straight from a Psychology Master's and I was worrying about being an interdisciplinary researcher (aka not being taken seriously by either theorists for doing psychology or by psychologists for doing music theory..).
@@ -99,7 +106,7 @@ So going into the conference, I have no idea how any of this will land.
 This whole post was sort of just a pre-registration of how I think it will go, but no telling how it all will turn out!
 They could all be catastrophic failures, but they also have the chance of being very helpful to everyone involved.
 
-And lastly for anyone getting this far in the post, it's worth mentioning that this year SMPC has a new [code of conduct](), so if you see anyone being insufferable towards students, especially during a presentation, please say something and report that.
+And lastly for anyone getting this far in the post, it's worth mentioning that this year SMPC has a new [code of conduct](https://wp.nyu.edu/smpc2019/smpc-code-of-conduct/), so if you see anyone being insufferable towards students, especially during a presentation, please say something and report that.
 Also, don't be that guy.
 Part of me wants to say "BuT I cOulD _neVeR_ iMagIne tHaT haPPenIng At SmPcCcC", but I'm not that naive. 
 
