--- a/public/post/2019-07-31-smpc-for-students.Rmd
+++ b/public/post/2019-07-31-smpc-for-students.Rmd
@@ -43,6 +43,7 @@ At the time of the Twitter conversation in early July, [Blair](https://twitter.c
 
 I'll be printing out the this weekend and will be distributing them post-Monday's keynote.
 Anyone is welcome to grab them and play in that middle awkward period between the talk and the reception (see image) and will hopefully get people talking.
+If you have some last minute ideas of blanks to add, put them [here](https://docs.google.com/spreadsheets/d/19GTI5qn-mrnS8QFIPngM-Pjw3KtAS2H0GPwLoAu9jlQ/edit?usp=sharing)!
 
 ![](/img/smpc_student/smpc_social.png)
 
